new attractions layout

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
               <button type="button" class="navbar-toggle" data-toggle="collapse">
               <ul>
-                <li>McCay Wedding</li>
+                <li id="inputField">McCay Wedding</li>
                 <li>Helllo</li>
 
               </ul>
@@ -75,6 +75,7 @@
             </ul>
           </nav> -->
         </div> <!--end nav container-->
+
         <div class="container">
           <div class="jumbotron">
 
@@ -114,13 +115,71 @@
           </div>
         </div>
 
-          <!--start fun places to go -->
-        <div class="boxForWholePage">
-        <div class="mt">
-          <h1 id="goingToMontanaHeader">So you're going to <span class="montana">Montana?</span></h1>
-          <h1 id="lotsToSee">There are a lot of great things to do and see!</h1>
+
+
+
+        <!-- Page Content -->
+        <div class="container">
+
+
+          <!-- Team Members Row -->
+          <div class="row">
+            <div class="col-lg-12">
+              <h2 class="my-4">Our Team</h2>
+              <div class="mt">
+                <h1 id="goingToMontanaHeader">So you're going to <span class="montana">Montana?</span></h1>
+                <h1 id="lotsToSee">There are a lot of great things to do and see!</h1>
+
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="images/glacier-national-park.jpg" alt="Glacier National Park" height="200px" width="350px">
+              <h3>Glacier National Park
+
+              </h3>
+              <p>Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4 class="attractionDescription">
+              Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></p>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="images/yellowstone.jpg" alt="Yellowstone National Park" height="200px" width="350px">
+              <h3>Yellowstone National Park
+              </h3>
+              <p>If you are making the trek to Montana, why not travel to the famous Yellowstone National Park?</h4 class="attractionDescription">
+               Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></p>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
+              <h3>Garden of 1000 Buddha's
+              </h3>
+              <p>Just down the road in Arlee you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4 class="attractionDescription">
+            Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></p>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="images/flathead.jpg" alt="Flathead Lake" height="200px" width="350px">
+              <h3>Flathead Lake
+              </h3>
+              <p>Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4 class="attractionDescription">
+              Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></p>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+              <h3>John Smith
+                <small>Job Title</small>
+              </h3>
+              <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+              <h3>John Smith
+                <small>Job Title</small>
+              </h3>
+              <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+            </div>
+          </div>
 
         </div>
+          <!--start fun places to go -->
+        <div class="boxForWholePage">
     <div class="container">
       <div class="row">
         <div class="glacier">
