new nav bar, padding for jumbotron on small media screen, remove background for wedding details box

--- a/Attractions.html
+++ b/Attractions.html
@@ -135,4 +135,84 @@
     </div> <!-- close container-->
   </div> <!--close box for whole page-->
 
+
+
+
+  <div class="boxForWholePage">
+<div class="container">
+<div class="row">
+  <div class="glacier">
+    <div class="boxForDescriptions leftBoxes">
+
+    <h3 class="attractionHeader">Glacier National Park</h3>
+    <h4 class="attractionDescription">Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4 class="attractionDescription">
+    <h5>Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></h5>
+  </div>
+</div>
+  <div class="glacierPhoto">
+    <img class="attractionPhotos" src="images/glacier-national-park.jpg" alt="Glacier National Park">
+  </div>
+
+</div>
+
+<div class="row">
+
+  <div class="yellowstone">
+    <img class="attractionPhotos" src="images/yellowstone.jpg" alt="Yellowstone National Park">
+  </div>
+  <div class="yellowstonePhoto">
+    <div class="boxForDescriptions rightBoxes">
+      <h3 class="attractionHeader">Yellowstone National Park</h3>
+      <h4 class="attractionDescription">You've already made the trek to goingToMontanaHeader, why not travel to the famous Yellowstone National Park?</h4 class="attractionDescription">
+      <h5>Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></h5>
+    </div>
+  </div>
+
+</div> <!--close row-->
+
+
+<div class="row">
+
+  <div class="buddha">
+    <div class="boxForDescriptions leftBoxes">
+      <h3 class="attractionHeader">Garden of 1000 Buddha's</h3>
+      <h4 class="attractionDescription">Just down the road in Arlee you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4 class="attractionDescription">
+      <h5>Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></h5>
+    </div>
+  </div>
+  <div class="buddhaPhoto">
+    <img class="attractionPhotos" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
+  </div>
+
+</div> <!--close row-->
+
+<div class="row">
+
+  <div class="flatheadPhoto">
+    <img class="attractionPhotos" src="images/flathead.jpg" alt="Flathead Lake">
+  </div>
+  <div class="flathead">
+    <div class="boxForDescriptions rightBoxes">
+      <h3 class="attractionHeader">Flathead Lake</h3>
+      <h4 class="attractionDescription">Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4 class="attractionDescription">
+      <h5>Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></h5>
+    </div>
+  </div>
+
+  </div>
+</div> <!-- close container-->
+</div> <!--close box for whole page-->
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
