--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <!-- navigation -->
-    <div class="container">
+    <!-- <div class="container"> -->
       <!-- <nav class="navbar navbar-inverse" role="navigation">
            <div class="navbar-header">
                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
@@ -51,8 +51,20 @@
                </div>
           </nav> -->
 
-
-
+          <nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">McCay Wedding</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Things to do</a></li>
+      <li><a href="#">Page 2</a></li>
+      <li><a href="#">Page 3</a></li>
+    </ul>
+  </div>
+</nav>
+<!--
           <nav class="navbar navbar-default navbar-transparent navbar-fixed-top navbar-color-on-scroll" id="sectionsNav">
                   <div class="container">
 
@@ -66,15 +78,16 @@
               </ul>
 
             </div>
-          </div>
-        </nav>
+          </div> -->
+        <!-- </nav> -->
            <!-- <ul>
               <li a href="#home">McCay Wedding</li>
               <li a href="#attractions">MT Activities</li>
               <li a href="accomodation.html">Accomodation</li>
             </ul>
           </nav> -->
-        </div> <!--end nav container-->
+        <!-- </div> -->
+         <!--end nav container-->
 
         <div class="container">
           <div class="jumbotron">
@@ -103,8 +116,6 @@
                 <h4>Jessica McCay and Nereus Brown's <br>
                   wedding and reception will be at the McCay Residence in Arlee, MT</h4>
 
-            <!-- <div class="col-xs-6">
-              <div class="boxed"> -->
                 <h1>Dress is formal, although we encourage you to bring along a pair of comfortable shoes. We plan on dancing the night away and hope that you will join us! <br>Drinking and driving is not something we want our guests to do so we will be organizing a shuttle from and to Missoula for our wedding celebration. A few of you have asked about camping and we are encouraging our guest to set up camp on our property in Arlee!</h1>
               </div>
 
@@ -179,70 +190,7 @@
 
         </div>
           <!--start fun places to go -->
-        <div class="boxForWholePage">
-    <div class="container">
-      <div class="row">
-        <div class="glacier">
-          <div class="boxForDescriptions leftBoxes">
 
-          <h3 class="attractionHeader">Glacier National Park</h3>
-          <h4 class="attractionDescription">Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4 class="attractionDescription">
-          <h5>Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></h5>
-        </div>
-      </div>
-        <div class="glacierPhoto">
-          <img class="attractionPhotos" src="images/glacier-national-park.jpg" alt="Glacier National Park">
-        </div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="yellowstone">
-          <img class="attractionPhotos" src="images/yellowstone.jpg" alt="Yellowstone National Park">
-        </div>
-        <div class="yellowstonePhoto">
-          <div class="boxForDescriptions rightBoxes">
-            <h3 class="attractionHeader">Yellowstone National Park</h3>
-            <h4 class="attractionDescription">You've already made the trek to goingToMontanaHeader, why not travel to the famous Yellowstone National Park?</h4 class="attractionDescription">
-            <h5>Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></h5>
-          </div>
-        </div>
-
-      </div> <!--close row-->
-
-
-      <div class="row">
-
-        <div class="buddha">
-          <div class="boxForDescriptions leftBoxes">
-            <h3 class="attractionHeader">Garden of 1000 Buddha's</h3>
-            <h4 class="attractionDescription">Just down the road in Arlee you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4 class="attractionDescription">
-            <h5>Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></h5>
-          </div>
-        </div>
-        <div class="buddhaPhoto">
-          <img class="attractionPhotos" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
-        </div>
-
-      </div> <!--close row-->
-
-      <div class="row">
-
-        <div class="flatheadPhoto">
-          <img class="attractionPhotos" src="images/flathead.jpg" alt="Flathead Lake">
-        </div>
-        <div class="flathead">
-          <div class="boxForDescriptions rightBoxes">
-            <h3 class="attractionHeader">Flathead Lake</h3>
-            <h4 class="attractionDescription">Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4 class="attractionDescription">
-            <h5>Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></h5>
-          </div>
-        </div>
-
-        </div>
-      </div> <!-- close container-->
-    </div> <!--close box for whole page-->
 
 
 
