--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
-
+    <link href="https://fonts.googleapis.com/css?family=Rouge+Script" rel="stylesheet">
     <style>
       .sidenav {
         height: 100%;
@@ -116,66 +116,69 @@
 <br>
 <br>
 <br>
-
+<hr>
+<h1 id="rsvp"><a href="http://McCayBrownWedding.rsvpify.com">RSVP</a></h1>
+<hr>
 <br>
 <br>
 <br>
-        <!-- Page Content -->
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="mt">
-                <h2>:)</h2>
-                <h1 id="goingToMontanaHeader">So you're going to <span class="montana">Montana?</span></h1>
-                <h1 id="lotsToSee">There are a lot of great things to do and see!</h1>
 
-              </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4">
-              <img class="rounded-circle img-fluid d-block mx-auto" src="images/glacier-national-park.jpg" alt="Glacier National Park" height="200px" width="350px">
-              <h3>Glacier National Park
+    <div class="container">
 
-              </h3>
-              <p>Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4 class="attractionDescription">
-              Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4">
-              <img class="rounded-circle img-fluid d-block mx-auto" src="images/yellowstone.jpg" alt="Yellowstone National Park" height="200px" width="350px">
-              <h3>Yellowstone National Park
-              </h3>
-              <p>If you are making the trek to Montana, why not travel to the famous Yellowstone National Park?</h4 class="attractionDescription">
-               Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4">
-              <img class="rounded-circle img-fluid d-block mx-auto" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
-              <h3>Garden of 1000 Buddha's
-              </h3>
-              <p>Just down the road in Arlee you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4 class="attractionDescription">
-            Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4">
-              <img class="rounded-circle img-fluid d-block mx-auto" src="images/flathead.jpg" alt="Flathead Lake" height="200px" width="350px">
-              <h3>Flathead Lake
-              </h3>
-              <p>Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4 class="attractionDescription">
-              Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4">
-              <img class="rounded-circle img-fluid d-block mx-auto" src="http://chrislatray.files.wordpress.com/2010/04/m2.jpg" alt="The 'M'">
-              <h3>The 'M'
-              </h3>
-              <p>Hike the Missoula 'M'. See the beautiful view of Missoula from above while getting to breath that fresh Montana air.</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4">
-              <img class="rounded-circle img-fluid d-block mx-auto" src="http://vacationidea.com/pix/img25Hy8R/ideas/t-t6_missoula_farmer's_market_6281_mobi.jpg" alt="farmer's market">
-              <h3>Missoula Farmers Market
-                <small>Missoula, MT</small>
-              </h3>
-              <p>On Saturday's downtown missoula hosts the missoula farmer's market where you can find delicious breakfast food, fresh produce and some very neat hand made goods.</p>
-            </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="mt">
+            <h1 id="goingToMontanaHeader">So you're going to <span class="montana">Montana?</span></h1>
+            <h1 id="lotsToSee">There are a lot of great things to do and see!</h1>
           </div>
+        </div>
 
-        </div>           <!--end fun places to go -->
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="images/glacier-national-park.jpg" alt="Glacier National Park" height="200px" width="350px">
+          <h3>Glacier National Park
+
+          </h3>
+          <p>Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4 class="attractionDescription">
+          Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="images/yellowstone.jpg" alt="Yellowstone National Park" height="200px" width="350px">
+          <h3>Yellowstone National Park
+          </h3>
+          <p>If you are making the trek to Montana, why not travel to the famous Yellowstone National Park?</h4 class="attractionDescription">
+           Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
+          <h3>Garden of 1000 Buddha's
+          </h3>
+          <p>Just down the road in Arlee you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4 class="attractionDescription">
+        Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="images/flathead.jpg" alt="Flathead Lake" height="200px" width="350px">
+          <h3>Flathead Lake
+          </h3>
+          <p>Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4 class="attractionDescription">
+          Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="http://chrislatray.files.wordpress.com/2010/04/m2.jpg" alt="The 'M'">
+          <h3>The 'M'
+          </h3>
+          <p>Hike the Missoula 'M'. See the beautiful view of Missoula from above while getting to breath that fresh Montana air.</p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="http://vacationidea.com/pix/img25Hy8R/ideas/t-t6_missoula_farmer's_market_6281_mobi.jpg" alt="farmer's market">
+          <h3>Missoula Farmers Market
+            <small>Missoula, MT</small>
+          </h3>
+          <p>On Saturday's downtown missoula hosts the missoula farmer's market where you can find delicious breakfast food, fresh produce and some very neat hand made goods.</p>
+        </div>
+        
+      </div> <!--close row-->
+
+    </div>           <!--end fun places to go -->
 
   </body>
 </html>
