new background for body, custom text for media screens, daisy rsvp

--- a/index.html
+++ b/index.html
@@ -70,54 +70,56 @@
           <a href="#">Registry</a>
           <a href="#">Contact</a>
         </div>
-
         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; menu</span>
 
         <script>
-        function openNav() {
+          function openNav() {
             document.getElementById("mySidenav").style.width = "250px";
-        }
-
-        function closeNav() {
-            document.getElementById("mySidenav").style.width = "0";
-        }
+          }
+          function closeNav() {
+              document.getElementById("mySidenav").style.width = "0";
+          }
         </script>
-        </div>
 
+        </div>
       </div>
 
       <div class="flexbox-container">
         <div class="call-out">
-
           <div class="getting">
-            <h1 id="gettingMarried">We're getting married!</h1>
-            <br>
-            <h2 id="weddingDate"> 30th June, 2018</h2>
-            <h2 id="weddingTime">6:00pm</h2>
-          </div>
 
-          </div>
-        </div> <!--close flex container-->
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <div class="boxed">
-                <h4>Jessica McCay and Nereus Brown's <br>
-                  wedding and reception will be at the McCay Residence in Arlee, MT</h4>
-                <h1>We hope that you will come and share this special day with us. We want you to be a part of this wonderful day! We plan on dancing the night away and hope that you will join us and don't forget to bring along your comfortable shoes! <br>Drinking and driving is not something we want our guests to do so we will be organizing a shuttle from and to Missoula for our wedding celebration. A few of you have asked about camping and we are encouraging our guest to set up camp on our property in Arlee!</h1>
+            <div class="row">
+              <div class="col-xs-5">
+                <h1 class="savethedatetext" id="gettingMarried">We're getting married!</h1>
+                <h2  class="savethedatetext" id="weddingDate"> 30th June, 2018</h2>
+                <h2  class="savethedatetext" id="weddingTime">6:00pm</h2>
+              </div>
+
+              <div class="col-xs-7">
+                <div class="boxed">
+                  <p> <span class="happyCouple"> Jessica</span> & <span class="happyCouple"> Nereus's </span>wedding and reception will be at the McCay Residence in Arlee, MT. <br>
+                    There will be an open bar to enjoy, we encourage you to take advantage of our designated shuttle service to get you to and from the wedding. Please email jessmccay@gmail.com for more details.
+                      We love to dance so don't forget to bring along some comfortable shoes if you plan to 'get down'! </p>
+                </div>
               </div>
             </div>
-              <!-- </div>
-
-            </div> -->
+            <br>
           </div>
         </div>
+      </div> <!--close flex container-->
 
 <br>
 <br>
 <br>
 <hr>
-<h1 id="rsvp"><a href="http://McCayBrownWedding.rsvpify.com">RSVP</a></h1>
+<div class="row">
+  <div class="col-xs-8">
+    <h1 id="rsvp"><a href="http://McCayBrownWedding.rsvpify.com">RSVP</a></h1>
+  </div>
+  <div class="col-xs-4">
+    <img id="daisy" src="images/daisy.png" alt="">
+  </div>
+</div>
 <hr>
 <br>
 <br>
@@ -170,12 +172,10 @@
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="http://vacationidea.com/pix/img25Hy8R/ideas/t-t6_missoula_farmer's_market_6281_mobi.jpg" alt="farmer's market">
-          <h3>Missoula Farmers Market
-            <small>Missoula, MT</small>
-          </h3>
+          <h3>Missoula Farmers Market</h3>
           <p>On Saturday's downtown missoula hosts the missoula farmer's market where you can find delicious breakfast food, fresh produce and some very neat hand made goods.</p>
         </div>
-        
+
       </div> <!--close row-->
 
     </div>           <!--end fun places to go -->
