--- a/index.html
+++ b/index.html
@@ -101,13 +101,12 @@
 
               </div>
               <div class="col-xs-2">
-
               </div>
-              <p id="details">The wedding ceremony and reception will be at the McCay Residence in Arlee, MT. <br>
-                There will be a shuttle service to pick wedding guests up and bring them to the McCay residence and back again after the reception.
-                We hope you will take advantage of this service as there will be an open bar to enjoy! Please email jessmccay@gmail.com for more details.
-                We love to dance so don't forget to bring along some comfortable shoes if you plan to 'get down'! </p>
             </div>
+            <p id="details">The wedding ceremony and reception will be at the McCay Residence in Arlee, MT. <br>
+              There will be a shuttle service to pick wedding guests up and bring them to the McCay residence and back again after the reception.
+              We hope you will take advantage of this service as there will be an open bar to enjoy! Please email jessmccay@gmail.com for more details.
+              We love to dance so don't forget to bring along some comfortable shoes if you plan to 'get down'! </p>
             <br>
           </div>
         </div>
@@ -142,43 +141,42 @@
 
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="images/glacier-national-park.jpg" alt="Glacier National Park" height="200px" width="350px">
-          <h3>Glacier National Park
-
-          </h3>
-          <p>Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4 class="attractionDescription">
+          <h3>Glacier National Park </h3>
+          <p class="attractionDescription">Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived until riding down The Sun Road!
           Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></p>
         </div>
+
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="images/yellowstone.jpg" alt="Yellowstone National Park" height="200px" width="350px">
-          <h3>Yellowstone National Park
-          </h3>
-          <p>If you are making the trek to Montana, why not travel to the famous Yellowstone National Park?</h4 class="attractionDescription">
+          <h3>Yellowstone National Park </h3>
+          <p class="attractionDescription">If you are making the trek to Montana, why not travel to the famous Yellowstone National Park?
            Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></p>
         </div>
+
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
-          <h3>Garden of 1000 Buddha's
-          </h3>
-          <p>Just down the road in Arlee you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4 class="attractionDescription">
-        Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></p>
+          <h3>Garden of 1000 Buddha's </h3>
+          <p class="attractionDescription">Just down the road in Arlee you will find the Garden of 1000 Buddha's. This impressive site is free to visit.
+            Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></p>
         </div>
+
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/flathead.jpg" alt="Flathead Lake" height="200px" width="350px">
-          <h3>Flathead Lake
-          </h3>
-          <p>Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4 class="attractionDescription">
-          Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></p>
+          <img class="rounded-circle img-fluid d-block mx-auto" src="images/flathead.jpg" alt="Flathead Lake" >
+          <h3>Flathead Lake</h3>
+          <p class="attractionDescription">Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!
+            Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></p>
         </div>
+
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="http://chrislatray.files.wordpress.com/2010/04/m2.jpg" alt="The 'M'">
-          <h3>The 'M'
-          </h3>
-          <p>Hike the Missoula 'M'. See the beautiful view of Missoula from above while getting to breath that fresh Montana air.</p>
+          <h3>The 'M' </h3>
+          <p class="attractionDescription">Hike the Missoula 'M'. See the beautiful view of Missoula from above while getting to breath that fresh Montana air.</p>
         </div>
+
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="http://vacationidea.com/pix/img25Hy8R/ideas/t-t6_missoula_farmer's_market_6281_mobi.jpg" alt="farmer's market">
-          <h3>Missoula Farmers Market</h3>
-          <p>On Saturday's downtown missoula hosts the missoula farmer's market where you can find delicious breakfast food, fresh produce and some very neat hand made goods.</p>
+          <h2>Missoula Farmers Market</h2>
+          <p class="attractionDescription">On Saturday mornings, downtown missoula hosts the missoula farmer's market where you can find delicious breakfast food, fresh produce and some very neat hand made goods.</p>
         </div>
 
       </div> <!--close row-->
