added daisies-various sizes, fix details section for large screen, change text color added container

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 </head>
   <body>
     <div class="container">
+
+
+    <div class="container">
       <div class="jumbotron">
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -93,7 +96,7 @@
                 <span id="jessNereus" class="happyCouple"> Jessica & Nereus</span>
                 <h1 class="savethedatetext" id="gettingMarried">are getting married!</h1>
                 <h2  class="savethedatetext" id="weddingDate"> 30th June, 2018</h2>
-                <h2  class="savethedatetext" id="weddingTime">6:00pm</h2>
+                <h2  class="savethedatetext" id="weddingTime">Arlee, Montana</h2>
               </div>
 
               <div class="col-xs-4">
@@ -118,10 +121,26 @@
 <hr>
 <div class="row">
   <div class="col-xs-4">
-    <img id="daisy" src="images/daisy.png" alt="">
+    <img class="daisy1" src="images/daisy.png" alt="">
+    <img class="daisy2" src="images/daisy.png" alt="">
+    <img class="daisy3" src="images/daisy.png" alt="">
+
   </div>
-  <div class="col-xs-8">
-    <h1 id="rsvp"><a href="http://McCayBrownWedding.rsvpify.com">RSVP</a></h1>
+
+    <div class="col-xs-4">
+      <img class="daisy4" src="images/daisy.png" alt="">
+      <img class="daisy4" src="images/daisy.png" alt="">
+      <img class="daisy10" src="images/daisy.png" alt="">
+      <img class="daisy11" src="images/daisy.png" alt="">
+
+      <h1 id="rsvp"><a href="http://McCayBrownWedding.rsvpify.com">RSVP</a></h1>
+    </div>
+
+  <div class="col-xs-4">
+    <img class="daisy6" src="images/daisy.png" alt="">
+    <img class="daisy7" src="images/daisy.png" alt="">
+    <img class="daisy8" src="images/daisy.png" alt="">
+    <img class="daisy9" src="images/daisy.png" alt="">
   </div>
 </div>
 <hr>
@@ -143,34 +162,35 @@
           <img class="rounded-circle img-fluid d-block mx-auto" src="images/glacier-national-park.jpg" alt="Glacier National Park" height="200px" width="350px">
           <h3>Glacier National Park </h3>
           <p class="attractionDescription">Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived until riding down The Sun Road!
-          Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></p>
+          Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">here.</a></p>
         </div>
 
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="images/yellowstone.jpg" alt="Yellowstone National Park" height="200px" width="350px">
           <h3>Yellowstone National Park </h3>
           <p class="attractionDescription">If you are making the trek to Montana, why not travel to the famous Yellowstone National Park?
-           Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></p>
+           Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">here.</a></p>
         </div>
 
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
-          <h3>Garden of 1000 Buddha's </h3>
-          <p class="attractionDescription">Just down the road in Arlee you will find the Garden of 1000 Buddha's. This impressive site is free to visit.
-            Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></p>
-        </div>
 
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="images/flathead.jpg" alt="Flathead Lake" >
           <h3>Flathead Lake</h3>
           <p class="attractionDescription">Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!
-            Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></p>
+            Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">here.</a></p>
         </div>
 
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="http://chrislatray.files.wordpress.com/2010/04/m2.jpg" alt="The 'M'">
           <h3>The 'M' </h3>
           <p class="attractionDescription">Hike the Missoula 'M'. See the beautiful view of Missoula from above while getting to breath that fresh Montana air.</p>
+        </div>
+
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
+          <h3>Garden of 1000 Buddha's </h3>
+          <p class="attractionDescription">Just down the road in Arlee you will find the Garden of 1000 Buddha's. This impressive site is free to visit.Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">here.</a>
+          </p>
         </div>
 
         <div class="col-lg-4 col-sm-6 text-center mb-4">
@@ -182,6 +202,6 @@
       </div> <!--close row-->
 
     </div>           <!--end fun places to go -->
-
+</div>
   </body>
 </html>
